--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 /node_modules
+/public/hot
 /public/storage
+/storage/*.key
 /vendor
-/.idea
+.env
+.env.backup
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
-.env
+npm-debug.log
+yarn-error.log
+/package-lock.json
+/composer.lock
