--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-  "private": true,
-  "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
-  },
-  "devDependencies": {
-    "bootstrap-sass": "3.4.*",
-    "gulp": "4.0.*",
-    "jquery": "3.4.*",
-    "laravel-elixir": "6.0.*",
-    "laravel-elixir-vue-2": "0.3.*",
-    "laravel-elixir-webpack-official": "1.0.*",
-    "lodash": "4.17.*",
-    "vue": "2.6.*",
-    "vue-resource": "1.5.*"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development -- --watch",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "devDependencies": {
+        "@tailwindcss/ui": "^0.5.0",
+        "autoprefixer": "^9.8.6",
+        "axios": "^0.19",
+        "cross-env": "^7.0.2",
+        "laravel-mix": "^5.0.1",
+        "lodash": "^4.17.19",
+        "postcss-import": "^12.0.1",
+        "precss": "^4.0.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.26.10",
+        "sass-loader": "^8.0.2",
+        "tailwindcss": "^1.3.0",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "bootstrap": "^5.0.0-alpha1",
+        "postcss-functions": "^3.0.0",
+        "postcss-scss": "^2.1.1"
+    }
 }
