--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "devDependencies": {
         "@tailwindcss/ui": "^0.5.0",
         "autoprefixer": "^9.8.6",
-        "axios": "^0.19",
         "cross-env": "^7.0.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "postcss-import": "^12.0.1",
         "precss": "^4.0.0",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.10",
         "sass-loader": "^8.0.2",
         "tailwindcss": "^1.3.0",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "bootstrap": "^5.0.0-alpha1",
-        "postcss-functions": "^3.0.0",
-        "postcss-scss": "^2.1.1"
+        "axios": "^0.19",
+        "bootstrap": "^4.5.2",
+        "jquery": "^3.5.1",
+        "node-sass": "^4.14.1",
+        "popper.js": "^1.16.1"
     }
 }
